--- a/project.ipynb
+++ b/project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "33ab3339",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7faa4eb6",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "6540f55f",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "(10051, 11)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "e438984f",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "4       7.0  08/02/19  10:37:00        Ewallet     5.3           0.48  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "15bed26a",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "c2ad024f",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
        "4       7.0  08/02/19  10:37:00        Ewallet     5.3           0.48  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,150 +691,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "628e078d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>invoice_id</th>\n",
-       "      <th>Branch</th>\n",
-       "      <th>City</th>\n",
-       "      <th>category</th>\n",
-       "      <th>unit_price</th>\n",
-       "      <th>quantity</th>\n",
-       "      <th>date</th>\n",
-       "      <th>time</th>\n",
-       "      <th>payment_method</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>profit_margin</th>\n",
-       "      <th>total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>WALM003</td>\n",
-       "      <td>San Antonio</td>\n",
-       "      <td>Health and beauty</td>\n",
-       "      <td>74.69</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>05/01/19</td>\n",
-       "      <td>13:08:00</td>\n",
-       "      <td>Ewallet</td>\n",
-       "      <td>9.1</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>522.83</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>WALM048</td>\n",
-       "      <td>Harlingen</td>\n",
-       "      <td>Electronic accessories</td>\n",
-       "      <td>15.28</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>08/03/19</td>\n",
-       "      <td>10:29:00</td>\n",
-       "      <td>Cash</td>\n",
-       "      <td>9.6</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>76.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>WALM067</td>\n",
-       "      <td>Haltom City</td>\n",
-       "      <td>Home and lifestyle</td>\n",
-       "      <td>46.33</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>03/03/19</td>\n",
-       "      <td>13:23:00</td>\n",
-       "      <td>Credit card</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>324.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>WALM064</td>\n",
-       "      <td>Bedford</td>\n",
-       "      <td>Health and beauty</td>\n",
-       "      <td>58.22</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>27/01/19</td>\n",
-       "      <td>20:33:00</td>\n",
-       "      <td>Ewallet</td>\n",
-       "      <td>8.4</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>465.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>WALM013</td>\n",
-       "      <td>Irving</td>\n",
-       "      <td>Sports and travel</td>\n",
-       "      <td>86.31</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>08/02/19</td>\n",
-       "      <td>10:37:00</td>\n",
-       "      <td>Ewallet</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>604.17</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   invoice_id   Branch         City                category  unit_price  \\\n",
-       "0           1  WALM003  San Antonio       Health and beauty       74.69   \n",
-       "1           2  WALM048    Harlingen  Electronic accessories       15.28   \n",
-       "2           3  WALM067  Haltom City      Home and lifestyle       46.33   \n",
-       "3           4  WALM064      Bedford       Health and beauty       58.22   \n",
-       "4           5  WALM013       Irving       Sports and travel       86.31   \n",
-       "\n",
-       "   quantity      date      time payment_method  rating  profit_margin   total  \n",
-       "0       7.0  05/01/19  13:08:00        Ewallet     9.1           0.48  522.83  \n",
-       "1       5.0  08/03/19  10:29:00           Cash     9.6           0.48   76.40  \n",
-       "2       7.0  03/03/19  13:23:00    Credit card     7.4           0.33  324.31  \n",
-       "3       8.0  27/01/19  20:33:00        Ewallet     8.4           0.33  465.76  \n",
-       "4       7.0  08/02/19  10:37:00        Ewallet     5.3           0.48  604.17  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       522.83\n",
+      "1        76.40\n",
+      "2       324.31\n",
+      "3       465.76\n",
+      "4       604.17\n",
+      "         ...  \n",
+      "9995    111.00\n",
+      "9996    116.00\n",
+      "9997    156.00\n",
+      "9998    158.00\n",
+      "9999    186.00\n",
+      "Name: total, Length: 9969, dtype: float64\n"
+     ]
     }
    ],
    "source": [
     "df['total'] = df['unit_price'] * df['quantity']\n",
     "\n",
-    "df.head()"
+    "df['total']"
    ]
   },
   {
@@ -993,231 +876,6 @@
    "outputs": [],
    "source": [
     "df.to_csv('walmart clean_data', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "3de548cf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method to_sql in module pandas.core.generic:\n",
-      "\n",
-      "to_sql(\n",
-      "    name: str,\n",
-      "    con,\n",
-      "    *,\n",
-      "    schema: str | None = None,\n",
-      "    if_exists: Literal['fail', 'replace', 'append'] = 'fail',\n",
-      "    index: bool_t = True,\n",
-      "    index_label: IndexLabel | None = None,\n",
-      "    chunksize: int | None = None,\n",
-      "    dtype: DtypeArg | None = None,\n",
-      "    method: Literal['multi'] | Callable | None = None\n",
-      ") -> int | None method of pandas.core.frame.DataFrame instance\n",
-      "    Write records stored in a DataFrame to a SQL database.\n",
-      "\n",
-      "    Databases supported by SQLAlchemy [1]_ are supported. Tables can be\n",
-      "    newly created, appended to, or overwritten.\n",
-      "\n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    name : str\n",
-      "        Name of SQL table.\n",
-      "    con : sqlalchemy.engine.(Engine or Connection) or sqlite3.Connection\n",
-      "        Using SQLAlchemy makes it possible to use any DB supported by that\n",
-      "        library. Legacy support is provided for sqlite3.Connection objects. The user\n",
-      "        is responsible for engine disposal and connection closure for the SQLAlchemy\n",
-      "        connectable. See `here                 <https://docs.sqlalchemy.org/en/20/core/connections.html>`_.\n",
-      "        If passing a sqlalchemy.engine.Connection which is already in a transaction,\n",
-      "        the transaction will not be committed.  If passing a sqlite3.Connection,\n",
-      "        it will not be possible to roll back the record insertion.\n",
-      "\n",
-      "    schema : str, optional\n",
-      "        Specify the schema (if database flavor supports this). If None, use\n",
-      "        default schema.\n",
-      "    if_exists : {'fail', 'replace', 'append'}, default 'fail'\n",
-      "        How to behave if the table already exists.\n",
-      "\n",
-      "        * fail: Raise a ValueError.\n",
-      "        * replace: Drop the table before inserting new values.\n",
-      "        * append: Insert new values to the existing table.\n",
-      "\n",
-      "    index : bool, default True\n",
-      "        Write DataFrame index as a column. Uses `index_label` as the column\n",
-      "        name in the table. Creates a table index for this column.\n",
-      "    index_label : str or sequence, default None\n",
-      "        Column label for index column(s). If None is given (default) and\n",
-      "        `index` is True, then the index names are used.\n",
-      "        A sequence should be given if the DataFrame uses MultiIndex.\n",
-      "    chunksize : int, optional\n",
-      "        Specify the number of rows in each batch to be written at a time.\n",
-      "        By default, all rows will be written at once.\n",
-      "    dtype : dict or scalar, optional\n",
-      "        Specifying the datatype for columns. If a dictionary is used, the\n",
-      "        keys should be the column names and the values should be the\n",
-      "        SQLAlchemy types or strings for the sqlite3 legacy mode. If a\n",
-      "        scalar is provided, it will be applied to all columns.\n",
-      "    method : {None, 'multi', callable}, optional\n",
-      "        Controls the SQL insertion clause used:\n",
-      "\n",
-      "        * None : Uses standard SQL ``INSERT`` clause (one per row).\n",
-      "        * 'multi': Pass multiple values in a single ``INSERT`` clause.\n",
-      "        * callable with signature ``(pd_table, conn, keys, data_iter)``.\n",
-      "\n",
-      "        Details and a sample callable implementation can be found in the\n",
-      "        section :ref:`insert method <io.sql.method>`.\n",
-      "\n",
-      "    Returns\n",
-      "    -------\n",
-      "    None or int\n",
-      "        Number of rows affected by to_sql. None is returned if the callable\n",
-      "        passed into ``method`` does not return an integer number of rows.\n",
-      "\n",
-      "        The number of returned rows affected is the sum of the ``rowcount``\n",
-      "        attribute of ``sqlite3.Cursor`` or SQLAlchemy connectable which may not\n",
-      "        reflect the exact number of written rows as stipulated in the\n",
-      "        `sqlite3 <https://docs.python.org/3/library/sqlite3.html#sqlite3.Cursor.rowcount>`__ or\n",
-      "        `SQLAlchemy <https://docs.sqlalchemy.org/en/20/core/connections.html#sqlalchemy.engine.CursorResult.rowcount>`__.\n",
-      "\n",
-      "        .. versionadded:: 1.4.0\n",
-      "\n",
-      "    Raises\n",
-      "    ------\n",
-      "    ValueError\n",
-      "        When the table already exists and `if_exists` is 'fail' (the\n",
-      "        default).\n",
-      "\n",
-      "    See Also\n",
-      "    --------\n",
-      "    read_sql : Read a DataFrame from a table.\n",
-      "\n",
-      "    Notes\n",
-      "    -----\n",
-      "    Timezone aware datetime columns will be written as\n",
-      "    ``Timestamp with timezone`` type with SQLAlchemy if supported by the\n",
-      "    database. Otherwise, the datetimes will be stored as timezone unaware\n",
-      "    timestamps local to the original timezone.\n",
-      "\n",
-      "    Not all datastores support ``method=\"multi\"``. Oracle, for example,\n",
-      "    does not support multi-value insert.\n",
-      "\n",
-      "    References\n",
-      "    ----------\n",
-      "    .. [1] https://docs.sqlalchemy.org\n",
-      "    .. [2] https://www.python.org/dev/peps/pep-0249/\n",
-      "\n",
-      "    Examples\n",
-      "    --------\n",
-      "    Create an in-memory SQLite database.\n",
-      "\n",
-      "    >>> from sqlalchemy import create_engine\n",
-      "    >>> engine = create_engine('sqlite://', echo=False)\n",
-      "\n",
-      "    Create a table from scratch with 3 rows.\n",
-      "\n",
-      "    >>> df = pd.DataFrame({'name' : ['User 1', 'User 2', 'User 3']})\n",
-      "    >>> df\n",
-      "         name\n",
-      "    0  User 1\n",
-      "    1  User 2\n",
-      "    2  User 3\n",
-      "\n",
-      "    >>> df.to_sql(name='users', con=engine)\n",
-      "    3\n",
-      "    >>> from sqlalchemy import text\n",
-      "    >>> with engine.connect() as conn:\n",
-      "    ...    conn.execute(text(\"SELECT * FROM users\")).fetchall()\n",
-      "    [(0, 'User 1'), (1, 'User 2'), (2, 'User 3')]\n",
-      "\n",
-      "    An `sqlalchemy.engine.Connection` can also be passed to `con`:\n",
-      "\n",
-      "    >>> with engine.begin() as connection:\n",
-      "    ...     df1 = pd.DataFrame({'name' : ['User 4', 'User 5']})\n",
-      "    ...     df1.to_sql(name='users', con=connection, if_exists='append')\n",
-      "    2\n",
-      "\n",
-      "    This is allowed to support operations that require that the same\n",
-      "    DBAPI connection is used for the entire operation.\n",
-      "\n",
-      "    >>> df2 = pd.DataFrame({'name' : ['User 6', 'User 7']})\n",
-      "    >>> df2.to_sql(name='users', con=engine, if_exists='append')\n",
-      "    2\n",
-      "    >>> with engine.connect() as conn:\n",
-      "    ...    conn.execute(text(\"SELECT * FROM users\")).fetchall()\n",
-      "    [(0, 'User 1'), (1, 'User 2'), (2, 'User 3'),\n",
-      "     (0, 'User 4'), (1, 'User 5'), (0, 'User 6'),\n",
-      "     (1, 'User 7')]\n",
-      "\n",
-      "    Overwrite the table with just ``df2``.\n",
-      "\n",
-      "    >>> df2.to_sql(name='users', con=engine, if_exists='replace',\n",
-      "    ...            index_label='id')\n",
-      "    2\n",
-      "    >>> with engine.connect() as conn:\n",
-      "    ...    conn.execute(text(\"SELECT * FROM users\")).fetchall()\n",
-      "    [(0, 'User 6'), (1, 'User 7')]\n",
-      "\n",
-      "    Use ``method`` to define a callable insertion method to do nothing\n",
-      "    if there's a primary key conflict on a table in a PostgreSQL database.\n",
-      "\n",
-      "    >>> from sqlalchemy.dialects.postgresql import insert\n",
-      "    >>> def insert_on_conflict_nothing(table, conn, keys, data_iter):\n",
-      "    ...     # \"a\" is the primary key in \"conflict_table\"\n",
-      "    ...     data = [dict(zip(keys, row)) for row in data_iter]\n",
-      "    ...     stmt = insert(table.table).values(data).on_conflict_do_nothing(index_elements=[\"a\"])\n",
-      "    ...     result = conn.execute(stmt)\n",
-      "    ...     return result.rowcount\n",
-      "    >>> df_conflict.to_sql(name=\"conflict_table\", con=conn, if_exists=\"append\", method=insert_on_conflict_nothing)  # doctest: +SKIP\n",
-      "    0\n",
-      "\n",
-      "    For MySQL, a callable to update columns ``b`` and ``c`` if there's a conflict\n",
-      "    on a primary key.\n",
-      "\n",
-      "    >>> from sqlalchemy.dialects.mysql import insert\n",
-      "    >>> def insert_on_conflict_update(table, conn, keys, data_iter):\n",
-      "    ...     # update columns \"b\" and \"c\" on primary key conflict\n",
-      "    ...     data = [dict(zip(keys, row)) for row in data_iter]\n",
-      "    ...     stmt = (\n",
-      "    ...         insert(table.table)\n",
-      "    ...         .values(data)\n",
-      "    ...     )\n",
-      "    ...     stmt = stmt.on_duplicate_key_update(b=stmt.inserted.b, c=stmt.inserted.c)\n",
-      "    ...     result = conn.execute(stmt)\n",
-      "    ...     return result.rowcount\n",
-      "    >>> df_conflict.to_sql(name=\"conflict_table\", con=conn, if_exists=\"append\", method=insert_on_conflict_update)  # doctest: +SKIP\n",
-      "    2\n",
-      "\n",
-      "    Specify the dtype (especially useful for integers with missing values).\n",
-      "    Notice that while pandas is forced to store the data as floating point,\n",
-      "    the database supports nullable integers. When fetching the data with\n",
-      "    Python, we get back integer scalars.\n",
-      "\n",
-      "    >>> df = pd.DataFrame({\"A\": [1, None, 2]})\n",
-      "    >>> df\n",
-      "         A\n",
-      "    0  1.0\n",
-      "    1  NaN\n",
-      "    2  2.0\n",
-      "\n",
-      "    >>> from sqlalchemy.types import Integer\n",
-      "    >>> df.to_sql(name='integers', con=engine, index=False,\n",
-      "    ...           dtype={\"A\": Integer()})\n",
-      "    3\n",
-      "\n",
-      "    >>> with engine.connect() as conn:\n",
-      "    ...   conn.execute(text(\"SELECT * FROM integers\")).fetchall()\n",
-      "    [(1,), (None,), (2,)]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(df.to_sql)"
    ]
   },
   {
